# LLM-Light

./: .gitignore  README.md  generate_samples.sh  pyproject.toml  train.sh
configs/: python_moe_14m.yaml  python_moe_full.yaml  tinystories_hf_smoke.yaml  tinystories_local_text.yaml  tinystories_moe_full.yaml  verify_local_text.yaml  verify_one_sentence.yaml
docs/: ARCHITECTURE.md  CODING_STANDARDS.md  EXTENDING.md  FOLLOW_UP_TODO.md  ORCHESTRATION.md  PROJECT_PLAN.md  PYTHON_MODEL_SWEEP.md  PYTHON_MODEL_SWEEP_RESULTS.md  PYTHON_MODEL_SWEEP_THREE_RATIONALE.md  RESULTS.md  TRAINING.md
llm_lite/: __init__.py
scripts/: analyze_python_sweep_export.py  analyze_python_sweep_exports.py  generate_python_model_sweep.py  generate_python_model_sweep_three.py  generate_python_model_sweep_two.py  generate_tinypython_dataset.sh  train.sh
tests/: artifact_helpers.py  conftest.py  test_byte_bpe_tokenizer.py  test_character_tokenizer.py  test_config_export.py  test_config_loading.py  test_distributed_config_topology.py  test_distributed_data_checkpoint.py  test_distributed_training.py  test_evaluation_tensorboard.py  test_exact_reproduction.py  test_export_run_bundle.py  test_generate_python_model_sweep.py  test_generate_python_model_sweep_three.py  test_generate_python_model_sweep_two.py  test_generate_sweep_configs.py  test_generate_tinypython.py  test_generate_tinypython_eval.py  test_huggingface_sources.py  test_inference_engines.py  test_learning_rate_schedule.py  test_local_text_sources.py  test_modern_model.py  test_moe_model.py  test_orchestration_models.py  test_packing.py  (+12 more)
(+108 files in other folders)
