[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-light"
version = "0.1.0"
description = "Small artifact-based LLM training pipeline"
requires-python = ">=3.10"
dependencies = [
  "datasets>=2",
  "pydantic>=2",
  "pyyaml>=6",
  "requests>=2.34.2",
  "tensorboard>=2.20",
  "torch>=2",
  "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.5",
]
generation = [
  "transformers>=4.40",
  "vllm>=0.5",
]

[tool.setuptools.packages.find]
include = ["llm_lite*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "integration: end-to-end pipeline tests",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
